--- a/plop/component/component-playground.hbs
+++ b/plop/component/component-playground.hbs
@@ -6,7 +6,7 @@
   <UBasePage>
     <div class="pb-safe">
       <div class="p-4">
-        Basic
+        基础用法
       </div>
       <div flex="~ gap2 wrap" items-center px-4>
         <{{pascalCaseNameWithPrefix}}>
@@ -15,7 +15,7 @@
       </div>
 
       <div class="p-4">
-        Custom
+        自定义
       </div>
       <div flex="~ gap2 wrap" items-center px-4>
         <{{pascalCaseNameWithPrefix}}>
